src/services/Logary.Services.Rutta/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: analytics
  annotations:
    istio-injection: enabled
