src/services/Logary.Services.Rutta/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rutta

spec:
  ports:
  - name: http
    port: 80
    targetPort: http
